--- a/package.json
+++ b/package.json
@@ -4,8 +4,22 @@
   "description": "A challenge to asses Node and Express knowledge",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "nodemon ./src/app.js"
   },
-  "author": "Ivan Mora",
-  "license": "ISC"
+  "author": "Michael M",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mikemarshal/Sprint-Challenge-Node-Express.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mikemarshal/Sprint-Challenge-Node-Express/issues"
+  },
+  "homepage": "https://github.com/mikemarshal/Sprint-Challenge-Node-Express#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "node-fetch": "^2.1.1"
+  }
 }
